# mercury

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
docs/: ARCHITECTURE_ref.md  Agent 项目构思与选型.md  BENCHMARK_SUMMARY.md  PPT_PRESENTATION.md  RESUME.md  RESUME_ref.md  architecture.md
scripts/: debug_model_dispatch.py  gen_task_data.py  pull_docker_image.py  reset_skills.py  run_benchmarks.py  sandbox.Dockerfile
src/mercury/: __init__.py  cli.py  config.py  graph.py  llm.py  state.py  tools.py  trace.py  workspace.py
src/mercury/eval/: metrics.py  plots.py  runner.py
src/mercury/eval/tasks/: __init__.py
src/mercury/eval/tasks/csv/csv-001/: expected.csv  input.csv  task.py
src/mercury/eval/tasks/csv/csv-002/: expected.csv  input.csv  task.py
src/mercury/eval/tasks/csv/csv-003/: expected.csv  input.csv  task.py
src/mercury/eval/tasks/csv/csv-004/: expected.csv  input.csv  task.py
src/mercury/eval/tasks/csv/csv-005/: expected.csv  input.csv  task.py
src/mercury/eval/tasks/json/json-001/: expected.csv  input.json  task.py
src/mercury/eval/tasks/json/json-002/: expected.csv  input.json  task.py
src/mercury/nodes/: __init__.py  evaluator.py  executor.py  synthesizer.py  verifier.py
src/mercury/sandbox/: __init__.py  docker_sandbox.py
src/mercury/skills/: loader.py  schema.py
tests/: test_config.py  test_evaluator.py  test_executor.py  test_llm.py  test_loader.py  test_metrics.py  test_plots.py  test_sandbox.py  test_state.py  test_synthesizer.py  test_tasks.py  test_tools_e2e.py  test_verifier.py
(+31 files in other folders)
