[project]
name = "mercury"
version = "0.1.0"
description = "Self-evolving skill synthesis agent (Mercury) — Harness Engineering with LangGraph + Agent Skills"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "pydantic>=2",
    "pyyaml>=6",
    "rich>=13",
    "pandas>=2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tenacity>=8",
    "docker>=7",
    "typer>=0.12",
    "python-dotenv>=1",
    "langchain-community>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
mercury = "mercury.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mercury"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
